<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">
<!--

        android:actionViewClass="android.support.v7.widget.SearchView"

-->
    <item
        android:id="@+id/action_vehicle_search"
        android:layout_width="match_parent"
        android:icon="@mipmap/ic_search"
        app:actionViewClass="com.github.leonardoxh.fakesearchview.FakeSearchView"
        android:title="@string/menu_item_search"
        android:visible="true"
        app:showAsAction="collapseActionView|ifRoom"
        tools:ignore="AppCompatResource,MenuTitle"/>

    <item
        android:id="@+id/action_vehicle_list_menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menu_item_refresh"
        app:showAsAction="always"/>

    <item
        android:icon="@mipmap/ic_filter"
        android:title="@string/meny_item_filter"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="MenuTitle"/>
</menu>