<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="1sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1sp"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1sp"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <tr.net.rota.aeyacin.rotamobil.ui.view.VerticalTextView3
                    android:id="@+id/vehicle_ignition_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:layout_margin="0sp"
                    android:gravity="center"
                    android:minWidth="150sp"
                    android:padding="1sp"
                    android:text="@string/ignition_close_text"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1sp"
                android:orientation="vertical"
                android:weightSum="100">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    tools:ignore="DisableBaselineAlignment">


                    <TextView
                        android:id="@+id/vehicle_plate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="1sp"
                        android:layout_weight="0.35"
                        android:background="@drawable/plate_border"
                        android:padding="5sp"
                        android:textAlignment="center"
                        android:textColor="#484849"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/main_item_car_type_and_tag"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.21"
                        android:drawableLeft="@mipmap/ic_car1_icon"
                        android:drawableStart="@mipmap/ic_car1_icon"
                        android:gravity="start|center_vertical|left"
                        android:textColor="#484849"
                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.45"
                        tools:ignore="UselessLeaf">

                        <ImageButton
                            android:id="@+id/imageButtonMenu"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:background="@mipmap/ic_menu_more"
                            android:scaleType="centerInside"
                            tools:ignore="ContentDescription,RtlHardcoded" />

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    tools:ignore="DisableBaselineAlignment">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.34"
                        android:orientation="horizontal"
                        android:textAlignment="center"
                        tools:ignore="NestedWeights">

                        <TextView
                            android:id="@+id/main_item_Speed"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableLeft="@drawable/ic_speed_simple2"
                            android:drawableStart="@drawable/ic_speed_simple2"
                            android:gravity="start|left|center_vertical"
                            android:text="120 km/s"
                            android:textColor="#484849"
                            tools:ignore="HardcodedText,RtlHardcoded" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/main_item_time"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableLeft="@drawable/ic_time_simple"
                            android:drawableStart="@drawable/ic_time_simple"
                            android:gravity="start|left|center_vertical"
                            android:text=" 20:18:11"
                            android:textColor="#484849"
                            tools:ignore="HardcodedText,RtlHardcoded" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:orientation="horizontal"
                        android:textAlignment="center">

                        <TextView
                            android:id="@+id/main_item_date"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableLeft="@drawable/ic_date_simple"
                            android:drawableStart="@drawable/ic_date_simple"
                            android:gravity="start|left|center_vertical"
                            android:text="7/20/2015"
                            android:textColor="#484849"

                            tools:ignore="HardcodedText,RtlHardcoded" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="0sp"
                    android:layout_marginRight="0sp"
                    android:layout_weight="25"
                    android:orientation="horizontal"
                    android:padding="2sp">

                    <TextView
                        android:id="@+id/main_item_adress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableLeft="@drawable/ic_location_simple"
                        android:drawableStart="@drawable/ic_location_simple"
                        android:gravity="start|left|center_vertical"
                        android:lines="2"
                        android:maxLines="2"
                        android:text=""
                        android:textColor="#000000"
                        android:textStyle="normal"
                        tools:ignore="HardcodedText,NestedWeights,RtlHardcoded" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1sp"
                    android:layout_weight="25"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/buttonTrack"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="0.35"
                        android:adjustViewBounds="true"
                        android:background="@drawable/raised_selector"
                        android:drawableLeft="@drawable/ic_track_me"
                        android:drawableStart="@drawable/ic_track_me"
                        android:gravity="start|left|center_vertical"
                        android:text="@string/btn_name_track"
                        android:textSize="11sp"
                        tools:ignore="ButtonStyle,NestedWeights,RtlHardcoded" />

                    <Button
                        android:id="@+id/buttonHistory"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="0.35"
                        android:background="@drawable/raised_selector"
                        android:drawableLeft="@drawable/ic_history_dual_point"
                        android:drawableStart="@drawable/ic_history_dual_point"
                        android:gravity="start|left|center_vertical"
                        android:text="@string/btn_name_history"
                        android:textSize="11sp"
                        android:visibility="visible"
                        tools:ignore="ButtonStyle,RtlHardcoded" />

                    <Button
                        android:id="@+id/buttonMonthlyTable"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="0.30"
                        android:background="@drawable/raised_selector"
                        android:drawableLeft="@drawable/ic_monthly_table"
                        android:drawableStart="@drawable/ic_monthly_table"
                        android:gravity="start|left|center_vertical"
                        android:text="@string/btn_name_monthly_table"
                        android:textSize="11sp"
                        android:visibility="visible"
                        tools:ignore="ButtonStyle,RtlHardcoded" />

                    <Button
                        android:id="@+id/buttonRapor"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="0.30"
                        android:background="@drawable/raised_selector"
                        android:drawableLeft="@drawable/report"
                        android:drawableStart="@drawable/report"
                        android:gravity="start|left|center_vertical"
                        android:text="@string/btn_name_report"
                        android:textSize="11sp"
                        android:visibility="visible"
                        tools:ignore="ButtonStyle,RtlHardcoded" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>